<resources>
    <string name="app_name">SAE_mobile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="recipes">Recettes</string>
    <string name="search">Rechercher</string>
    <string name="gender">Genre</string>
    <string name="servings_number">Nombre de portions</string>
    <string name="choose_a_recipe">Choisissez une recette</string>
    <string name="gluten_free">Sans Gluten</string>
    <string name="diet">Régime :</string>
    <string name="vegetarian">Végétalien</string>
    <string name="primary">Primaire</string>
    <string name="dairy_free">Sans Produit Laitier</string>
    <string name="vegan">Végan</string>
    <string name="recipe_instructions">Instructions de la recette :</string>
</resources>